--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -42,7 +42,7 @@ preloader = "" # use jpg, png, svg or gif format.
 [navigation_button]
 enable = true
 label = "Get Started"
-link = "contact"
+link = "get-started"
 
 # search
 # search module: https://github.com/gethugothemes/hugo-modules/tree/master/search
