--- a/hugo.toml
+++ b/hugo.toml
@@ -160,3 +160,7 @@ lazy = true
 [[params.plugins.js]]
 link = "plugins/youtube-lite.js"
 lazy = true
+# Add this new entry
+[[plugins.js]]
+link = "js/codetabs.js"
+lazy = false
