--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://demo.gethugothemes.com/fortify/site/"
+baseURL = "http://inicholasbe.github.io/jobrunr-website-rework/"
 # Title of your website (required).
 title = "JobRunr"
 # Your theme name
