--- a/hugo.toml
+++ b/hugo.toml
@@ -30,7 +30,7 @@ ID = 'G-MEASUREMENT_ID' # see https://gohugo.io/templates/internal/#configure-go
 
 ########################## Permalinks ############################
 [permalinks.page]
-"pages" = "/:slugorcontentbasename/"
+"pages" = "/:slugorfilename/"
 
 
 ############################# Modules ############################
