--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -77,17 +77,7 @@ weight = 5
 
 
 
-# footer menu
-[[footer_01]]
-name = "Feature"
-url = "/feature"
-weight = 1
-
-[[footer_01]]
-name = "Pricing"
-url = "/pricing"
-weight = 2
-
+# footer menu left
 [[footer_01]]
 name = "Blog"
 url = "/blog"
@@ -102,8 +92,3 @@ weight = 1
 name = "Privacy Policy"
 url = "/privacy-policy"
 weight = 2
-
-[[footer_02]]
-name = "Support"
-url = "/support"
-weight = 3
