--- a/config/development/server.toml
+++ b/config/development/server.toml
@@ -9,5 +9,5 @@
 # Default language must be last.
 [[redirects]]
 from = '/**'
-to = '/en/404.html'
+to = '/jobrunr-website-rework/404.html'
 status = 404
