--- a/hugo.toml
+++ b/hugo.toml
@@ -20,6 +20,9 @@ defaultContentLanguage = 'en'
 # defaultContentLanguageInSubdir need to be true if you want to use the language code as a subdirectory and language specific 404 page
 defaultContentLanguageInSubdir = false
 
+[params]
+jobRunrVersion = "8.1.0"
+
 ########################### Services #############################
 [services]
 [services.googleAnalytics]
