--- a/hugo.toml
+++ b/hugo.toml
@@ -83,7 +83,7 @@ maxAge = "720h"
 unsafe = true
 
 [markup.highlight]
-style = 'monokai' # see https://xyproto.github.io/splash/docs/all.html
+style = 'github'
 
 [markup.tableOfContents]
 startLevel = 2
