--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
-/public
-
-/node_modules
-
+Thumbs.db
 .DS_Store
-
-/resources/_gen
-
+.dist
+.tmp
+.lock
+.sass-cache
 .vscode
+npm-debug.log
+node_modules
+builds
+public
+resources
+.hugo_build.lock
+jsconfig.json
+hugo_stats.json
+go.sum
+yarn.lock
 hugo
