--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -53,11 +53,6 @@ weight = 3
 
 
 
-[[main]]
-name = "Contact"
-pageRef = "/contact"
-weight = 5
-
 
 
 # footer menu left
@@ -66,14 +61,19 @@ name = "Blog"
 url = "/blog"
 weight = 3
 
+[[footer_01]]
+name = "Contact"
+pageRef = "/contact"
+weight = 5
+
 [[footer_02]]
 name = "Terms"
-url = "/terms-conditions"
+url = "/licensing/info/"
 weight = 1
 
 [[footer_02]]
 name = "Privacy Policy"
-url = "/privacy-policy"
+url = "/privacy"
 weight = 2
 
 [[footer_02]]
