Replace CTA by search and github link

--- a/hugo.toml
+++ b/hugo.toml
@@ -22,6 +22,8 @@ defaultContentLanguageInSubdir = false
 
 [params]
 jobRunrVersion = "8.1.0"
+github_url = "https://github.com/jobrunr/jobrunr"
+github_stars = "2.8K"
 
 ########################### Services #############################
 [services]
