--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -64,7 +64,8 @@ jobs:
           # If your Hugo site is NOT in repo root, add: --source path/to/site
           npm run build || hugo --minify
           test -d public
-
+      - name: Index with Pagefind
+        run: npx -y pagefind --site public
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
